--- a/draft.tex
+++ b/draft.tex
@@ -110,7 +110,7 @@
 \maketitle
 \begin{abstract}
 Social choice deals with the problem of determining a consensus choice from the preferences of different agents (voters).
-In the classical setting, the voting rule is fixed beforehand and full preference information is provided.
+In the classical setting, the voting rule is fixed beforehand and full information concerning the preferences of the agents is provided.
 Recently, the assumption of full preference information has been questioned by a number of researchers and several methods for eliciting preferences have been proposed.
 
 In this paper we go one step further and we assume that both the voting rule and the agents preferences are partially specified.
@@ -123,7 +123,6 @@ and develop several query strategies that interleave questions to the chair and 
 \end{abstract}
 
 \section{Introduction}
-%\commentOC{Do we agree that we should talk systematically about agents (or systematically about voters)? Currently we talk about voters in first section, then agents.}
 Aggregation of preference information is a central task in many computer systems (recommender systems, search engines, etc).
 In many situations, such as in group recommender systems, the goal is to find a consensus choice.
 It is therefore natural to look at methods from social choice and see how they can be adapted for group decision-making in a computerized setting.
@@ -190,7 +189,7 @@ We let $C(\pprofile)=C(\ppref_1)\times … \times C(\ppref_n)$ be the set of com
 \medskip
 We also assume that the weights of the scoring rule are only partially specified.
 Therefore the vector $(w_1,\ldots,w_m)$  is not known but we are given a set of constraints restraining the possible values that weights can take.
-We consider a decreasing sequence of weights\footnote{We assume all positions from $1$ to $m-1$ may contribute positively to the score of an alternative. The case where it is known that only the first $k<m-1$ positions matter can be easily dealt with by specifying $w_r = 0$ for $r > k$ as constraints. }:
+We consider a decreasing sequence of weights\footnote{We assume all positions from $1$ to $m-1$ may contribute positively to the score of an alternative. The case where it is known that only the first $k<m-1$ positions matter can be easily dealt with by specifying $w_r = 0$ for $r > k$ as constraints. } \commentOC{It’s not clear to me that this is true…}:
 % If the chair considers that, for example, “only the first ten positions matter” (so that $w_r = 0$ for $r > 10$), then we simply assume the chair is able to express this constraint at the start of the querying process, thus, that this information is known, and approximate the problem by considering that it is only about the first ten alternatives, thus, set $m=10$.}
 \begin{align}
 1=w_{1} > w_{2} > \ldots > w_{m}=0. \label{eq:monotone}
@@ -299,7 +298,7 @@ The adversary has to make the score of $y$ as high as possible, and the score of
 To do this, he should complete $\ppref_j$ to $\pref_j$ by putting above $x$ as many alternatives as he can, that is, all the alternatives except those that are known to be worse than $x$ (those $a$ such that $x \ppref_j a$); and similarly, put below $y$ all the alternatives he can, thus, put above $y$ only those $a$ such that $a \ppref_j y$. 
 Sometimes these two objectives conflict: when an alternative should go above $x$ according to the first objective and below $y$ according to the second one (because $¬(x \ppref_j a) ∧ ¬(a \ppref_j y)$), and $x$ is known to be better than $y$ (thus $x \ppref_j y$). 
 In this case, the first objective should take priority, and $a$ should be put above $x$, which will move both $x$ and $y$ one rank lower than if $a$ had been put below $y$. 
-This maximizes the adversary’s interests: because the weight vector is convex, the difference in scores will be lower when both alternatives are ranked lower (Equation \ref{eq:convexity}), and that difference of score is in favor of $x$ when $x \ppref_j y$, thus to be minimized from the point of view of the adversary.
+This maximizes the adversary’s interests: because the weight vector is convex, the difference of scores will be lower when both alternatives are ranked lower (Equation \ref{eq:convexity}), and that difference of scores is in favor of $x$ when $x \ppref_j y$, thus to be minimized from the point of view of the adversary.
 To summarize:
 \begin{align} 
 \label{eq:compl}
@@ -308,15 +307,14 @@ a \pref_j x &⇔ ¬(x \ppref_j a)\\
 y \pref_j a &⇔ ¬(a \ppref_j y) ∧ (¬(x \ppref_j y) ∨ (x \ppref_j a)).
 \end{split}
 \end{align} 
-In what follows let $\hat{\profile}$ be the profile computed according to the above procedure, and  $\hat{v}_j$ the $j$-th element (the linear order extending the partial order $p_j$ of the $j$-th voter).
 We just sketched a proof of the following claim, and leave the rest of the proof to the reader.
 \begin{claim}
-There exists a completion $\hat{\profile} \in C(\pprofile)$ such that $\PMR(x,y; \pprofile, W) = \max_{\w \in W} [ s(y; \profile,\w) - s(x; \profile,\w) ]$ and that the linear order $\hat{v}_{j}$ of each agent $j$ satisfies (\ref{eq:compl}).
+There exists a completion $\hat{\profile} \in C(\pprofile)$ such that $\PMR(x,y; \pprofile, W) = \max_{\w \in W} [ s(y; \hat{\profile}, \w) - s(x; \hat{\profile}, \w) ]$ and such that the linear order $\hat{v}_{j}$ of each agent $j$ satisfies (\ref{eq:compl}).
 %There exists a completion ${\pref_j} \in C(\ppref_j)$ such that $\PMR(x,y; \pprofile, W) = \max_{\w \in W} \max_{\profile \in C(\pprofile), {\pref_j} \in \profile} [ s(y; \profile,\w) - s(x; \profile,\w) ]$ and that satisfies 
 \end{claim}
 %In this claim, we abuse notation by writing ${\pref_j} \in \profile$ to mean that the preference ordering corresponding to agent $j$ in $\profile$ is $\pref_j$.
-\noindent It follows that $\hat{v}_{j}(x)$, the rank of $x$ for voter $j$ in the PMR-maximizing linear order $\bar{v}_{j}$ %$\PMR(x,y; \pprofile, W)$ 
-is $\hat{v}_{j}(y) = 1+\card{A}-\card{{\ppref_j}(x)}$, where ${\ppref_j}(x)$ designates the set of alternatives that are less good than $x$ according to $\ppref_j$, and the rank of $y$ is $\hat{v}_{j}(x)=1+\card{{\pprefinv_j}(y)}+\beta$, where $\beta = \card{A} - \card{{\ppref_j}(x)}$ if $(x \ppref_j y)$ and $\beta = 0$ otherwise.
+It follows that $\hat{v}_{j}(x)$, the rank of $x$ in the PMR-maximizing linear order of voter $j$, %$\PMR(x,y; \pprofile, W)$ 
+is $\hat{v}_{j}(x) = 1+\card{A}-\card{{\ppref_j}(x)}$, where ${\ppref_j}(x)$ designates the set of alternatives that are less good than $x$ according to $\ppref_j$, and the rank of $y$ is $\hat{v}_{j}(y)=1+\card{{\pprefinv_j}(y)}+\beta$, where $\beta = \card{A} - \card{{\ppref_j}(x)}$ if $(x \ppref_j y)$ and $\beta = 0$ otherwise.
 
 %Proof: Define $\pref$ as just $\ppref_j$ with the arcs added to minimally satisfy the above. Thus, add the following arcs: when $x ? a$, add $a > x$. When $a ? y ∧ x \ppref_j y ∧ ¬(x \ppref_j a)$, add $a \pref y$. When $a ? y ∧ [¬(x \ppref_j y) ∨ (x \ppref_j a)]$, add $y \pref a$. Observe that $\ppref_j \subseteq \pref$. We have to show that it is acyclic. (Then we take its transitive closure to make it a partial order, and it’s done.) Note that if there is a cycle in $\pref$, it’s because of some new arcs, as $\ppref_j$ is acyclic. Thus, the cycle must go through one of these new arcs. …
 
@@ -363,6 +361,7 @@ is $\hat{v}_{j}(y) = 1+\card{A}-\card{{\ppref_j}(x)}$, where ${\ppref_j}(x)$ des
 %In summary, some best completion $\pref$ satisfies two properties: (1) for all $c \pinc x$, $c \pref x$; and (2) for all $c \pinc y$, if not $c \pref x \pref y$ then $y \pref c$. 
 %These two properties are intuitively understandable by observing that maximizing the PMR requires placing $x$ as low as possible, hence the first property; and $y$ as high as possible, hence the second property, with the exception that sometimes it is not possible to satisfy both goals and noting that the first goal is more important by convexity of the weights. 
 %A proof that this reasoning is correct is in \cref{sec:prfCompl}.
+
 \begin{claim}
 The $\PMR$ can be written as:
 \begin{align} 
@@ -448,10 +447,11 @@ Pick any alternative $c$ that is not $a$ or $b$.
 %Let $c_t$ denote the number of times $c$ reaches rank $t$ or better in $P$. Note that $c_m = p+q$ and $c_t ≤ p + q, 1 ≤ t ≤ m$. Define $a_t$ similarly, for the alternative $a$. By construction, $a_r = q$, $a_{r+2} = q+p = a_m$. 
 Define $c'_t$ as the number of times $c$ gets rank $t$ or better in $P'$, and define $a'_t$ similarly. Now $a'_1 ≥ \delta, a'_t ≥ 2\delta \text{ for } 2 ≤ t < m, a'_{r+2} = q+p+2\delta = a'_m$. To obtain upper bounds for $c'_t$, assume $c$ is ranked first by the $p+q$ agents voting in profile $P$. By our construction, the two times $\delta$ new agents of $P'$ give to $c$ the ranks $(3, m)$, or $(4, m-1)$, … Observe that the score of $c$ is maximal for attribution $(3, m)$, by convexity of the weights. Therefore, in the best case for $c$, $c'_1 ≤ p + q, c'_2 ≤ p+q, c'_t ≤ p+q+\delta \text{ for } 3 ≤ t < m, c'_m ≤ p+q+2\delta$. Observe that $a'_t ≥ c'_t, 1 ≤ t ≤ m$ (with strict inequality for $t=2$). Because weights are non increasing, this guarantees, with $\delta = p + q$, that the score of $a$ is not lower than the one of $c$ (it is even strictly higher, thanks to the strict inequality).
 
-This concludes the proof of the following claim. \commentOC{I don’t think the reorganization with moving the claim slightly upwards works. The proof really starts much higher and would be cut in half if moving the claim slightly. Moving it more would require more reorganisation of the text.}
+This concludes the proof of the following claim. 
 \begin{claim}
 	Given a rational $\lambda$ and a rank $r$ between $1$ and $m - 2$, the profile named $P'$ in the foregoing description is such that, for any weight vector $\w \in \W$, $a \in f(P')$ iff $w_{r} - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$ and $b \in f(P')$ iff $w_{r} - w_{r+1} ≤ \lambda (w_{r+1} - w_{r+2})$, where $f$ is the PSR parameterized with $\w$.
 \end{claim}
+\commentOC{Plz others check this.} At this stage, we are content that a procedure exists to transform our abstract questions to questions about winners of a PSR. Further studies would investigate, for example, what is lost in terms of elicitation efficiency when we are forced to restrain to realistic concrete questions, meaning, questions involving small profiles; or investigate the relationship between our understanding of scores as (cardinal) utility and (ordinal) scores as definition of a PSR.
 
 %\commentOC{I suppose we have, unfortunately, to get rid of this useful example, for reason of space. (If we manage to keep it, I’ll need to rework it a bit so that it follows the strategy in the proof.)}
 \begin{example}
@@ -511,8 +511,6 @@ d& 1& 2& 4& 6 \\
 \end{example}
 
 \paragraph{Elicitation strategies}
-\commentOC{TODO move this.} At this stage, we are content that a procedure exists to transform our questions to questions about winners of a PSR. Further studies would investigate, for example, what is lost in terms of elicitation efficiency when we are forced to restrain to realistic concrete questions, meaning, questions involving small profiles; or investigate the relationship between our understanding of scores as (cardinal) utility and (ordinal) scores as definition of a PSR.
-
 We develop several elicitation strategies for simultaneous elicitation of agents' preferences and of the scoring rule.
 While it is of course possible to first fully elicit the agents’ preferences and afterwards elicit weights, we also want to propose interleaved approaches and compare them experimentally.
 Indeed, it can be beneficial to interleave questions asked to the chair and questions asked to agents, depending on which is estimated to be more informative.
@@ -541,22 +539,14 @@ The \strat{Pessimistic} strategy selects the question that leads to minimal regr
 \[\max_{i=1,2} \MMR(\pprofile_i,W_i) \]
 This badness measure gives a way of picking questions among a set of possible questions, by picking one that minimizes the measure. Note that other aggregators than $\max$ can be used as well. The \strat{Pessimistic} strategy considers as possible questions the ones defined by the \strat{Random} strategy \commentOC{To check}. It uses a variant of the $\max$ as an aggregator: if the maximal $\MMR$ of two questions are equal, it prefers the question that has the lowest $\MMR$. We expect this strategy to perform very well, but only for very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$. For small dimensions, it gives us an estimate of an upper bound to the possible quality of a strategy.
 
-\commentOC{TODO Continue here.}
-Two phase method.
-Ask a predefined (non adaptive) sequence of questions in order to learn the weights $w$ of the scoring rule).
+\commentOC{TODO continue from here.}
+The \strat{Two phase} strategy asks a predefined, non adaptive sequence of questions in order to gather informations about the weights $w$ of the scoring rule. \commentOC{To check.}
 Then use minimax regret as in Lu and Boutilier.
 
-%\item Non-interleaved regret method: comparison with a method based on minimax regret, but not interleaved. 
-\medskip \noindent
-{\em Non-interleaved non-regret strategies (useful as benchmarks)}	
-	\begin{itemize}
-		\item Random strategy: randomly chooses an agent $i$ and a comparison query such that $x \pinc_i y$.
-		\item {\em Volumetric} strategy: chooses an agent $i$ and a query that maximizes the number of new pairwise preferences revealed given the worst response.
-	\end{itemize}
+%\item {\em Volumetric} strategy: chooses an agent $i$ and a query that maximizes the number of new pairwise preferences revealed given the worst response.
 
-% unless $\MMR=0$ we ask a question that reduce uncertainty
-
-\section{Empirical Evaluation} \label{sec:experiments}
+\section{Empirical Evaluation} 
+\label{sec:experiments}
 
 {\em {\bf TODO:} update with actual experiments}
 
